@@ -1,54 +1,84 @@
 package ar.edu.itba.pod.hazelcast.client;
 
-
-
-
 import ar.edu.itba.pod.hazelcast.common.ZonesRow;
 import com.hazelcast.client.HazelcastClient;
 import com.hazelcast.client.config.ClientConfig;
 import com.hazelcast.client.config.ClientNetworkConfig;
 import com.hazelcast.config.GroupConfig;
 import com.hazelcast.core.HazelcastInstance;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import com.hazelcast.core.ICompletableFuture;
+import com.hazelcast.mapreduce.JobTracker;
+import com.hazelcast.mapreduce.KeyValueSource;
 
-import java.io.BufferedWriter;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.time.LocalDateTime;
+import java.time.Instant;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
+import java.util.logging.*;
+import java.util.logging.Formatter;
 import java.util.stream.Stream;
 
 
-abstract class Client {
-    protected Logger logger;
-    protected BufferedWriter timesWriter;
+abstract class Client<T, K> {
+    private static final Logger logger = Logger.getLogger(Client.class.getName());
+    private static final Logger timeLogger = Logger.getLogger("timeLogger");
+
+    protected Integer clientNumber;
     protected String address;
     protected String inPath;
     protected String outPath;
+
     protected HazelcastInstance hazelcastInstance;
+
+    // TODO Porque un HashMap y no un mapa de hazelcast???? (no sirve en distribuido, es mapa en memoria del nodo cliente)
     protected HashMap<Integer, ZonesRow> zonesMap = new HashMap<>();
+
     protected final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
-    public Client(String address, String inPath, String outPath){
+    public Client(Integer clientNumber, String address, String inPath, String outPath){
+        this.clientNumber = clientNumber;
         this.address = address;
         this.inPath = inPath;
         this.outPath = outPath;
-        this.logger = LoggerFactory.getLogger(this.getClass());
         try {
-            this.timesWriter = Files.newBufferedWriter(Path.of("client/src/main/assembly/times.csv"), StandardCharsets.UTF_8);
+            FileHandler fh = new FileHandler(Path.of(outPath).resolve("time" + clientNumber + ".csv").toString(), false);
+            fh.setFormatter(new Formatter() {
+                DateTimeFormatter dtf = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm:ss:SSSS")
+                        .withZone(ZoneId.systemDefault());
+
+                @Override
+                public String format(LogRecord record) {
+                    String timestamp = dtf.format(Instant.ofEpochMilli(record.getMillis()));
+                    String thread = Thread.currentThread().getName();
+                    String className = record.getSourceClassName();
+                    return String.format("%s %s  [%s] %s (%s.java) - %s%n",
+                            timestamp,
+                            record.getLevel(),
+                            thread,
+                            className.substring(className.lastIndexOf(".") + 1),
+                            className.substring(className.lastIndexOf(".") + 1),
+                            record.getMessage());
+                }
+            });
+            timeLogger.addHandler(fh);
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            e.printStackTrace();
         }
     }
 
-    public boolean initializeHazelcast(){
-        try{
+    abstract KeyValueSource<Integer, T> loadData() throws IOException;
+    abstract ICompletableFuture<K> executeMapReduce(JobTracker jobTracker, KeyValueSource<Integer, T> keyValueSource);
+    abstract void writeResults(K results) throws IOException;
+
+    public void run(){
+        logger.info("Query-" + clientNumber + " Client Starting ...");
+
+        try {
             // Group Config
             GroupConfig groupConfig = new GroupConfig().setName("g05-hazelcast").setPassword("g05-hazelcast-pass");
 
@@ -61,22 +91,32 @@ abstract class Client {
 
             // Node Client
             hazelcastInstance = HazelcastClient.newHazelcastClient(clientConfig);
-        }catch (Exception e){
-            logger.error(e.getMessage());
-            return false;
+
+            timeLogger.info("Inicio de la lectura del archivo");
+
+            KeyValueSource<Integer, T> valueSource = loadData();
+
+            timeLogger.info("Fin de lectura del archivo");
+            timeLogger.info("Inicio del trabajo map/reduce");
+
+            JobTracker jobTracker = hazelcastInstance.getJobTracker("query-" + clientNumber);
+            ICompletableFuture<K> future = executeMapReduce(jobTracker, valueSource);
+
+            K results = future.get();
+
+            writeResults(results);
+
+            timeLogger.info("Fin del trabajo map/reduce");
+        } catch ( Exception e ){
+            logger.log(Level.SEVERE, "Error en la ejecución", e);
+        } finally{
+            HazelcastClient.shutdownAll();
         }
 
-        return true;
     }
 
-    public void finalizeHazelcast(){
-        hazelcastInstance.shutdown();
-    }
-
-    abstract int run();
-
-    public void loadZonesData() throws IOException {
-        try (Stream<String> lines = Files.lines(Paths.get("client/src/main/assembly/overlay/zones.csv"), StandardCharsets.UTF_8)) {
+    protected void loadZonesData() throws IOException {
+        try (Stream<String> lines = Files.lines(Paths.get(Path.of(inPath).resolve("zones.csv").toString()), StandardCharsets.UTF_8)) {
             lines.skip(1)
                     .map(line -> line.split(";"))
                     .map(line -> new ZonesRow(
@@ -88,11 +128,11 @@ abstract class Client {
         }
     }
 
-    public void printResults(List<String> toPrintList){
+    protected void printResults(List<String> toPrintList){
         try {
-            Files.write(Path.of(outPath), toPrintList, StandardCharsets.UTF_8);
+            Files.write(Path.of(outPath).resolve("query" + clientNumber + ".csv"), toPrintList, StandardCharsets.UTF_8);
         } catch (IOException e) {
-            logger.error("Error writing the file {}:", outPath, e);
+            logger.log(Level.SEVERE, "Error writing the file {}:", e);
         }
     }
 }
